tests/parser/should_fail/unpack_empty_type.hs
module UnpackEmptyType where

data T = T { t :: {-# UNPACK #-} }
