tests/parser/should_fail/unpack_empty_type.stderr

unpack_empty_type.hs:3:34: error: [GHC-58481]
    parse error on input ‘}’
